# async-fastapi-boilerplate

./: .env  .gitignore  README.md  docker-compose.dev.yml
backend/: celery.dockerfile  fastapi.dockerfile
backend/app/: pyproject.toml  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: b96312ab83ad_inital.py
backend/app/app/: backend_pre_start.py  initial_data.py  main.py  worker.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: items.py  login.py  users.py  utils.py
backend/app/app/core/: celery_app.py  security.py  settings.py
backend/app/app/crud/: base.py  crud_item.py  crud_user.py
backend/app/app/db/: init_db.py  session.py
backend/app/app/email-templates/src/: new_account.mjml  reset_password.mjml  test_email.mjml
backend/app/app/schemas/: __init__.py  item.py  user.py
backend/app/app/utils/: emails.py
prometheus/: prometheus.yml
